[#103] [BUG][CSP][PRO] Preservar campos de auditoría al modificar equipo de proyecto
El método update() pasaba los objetos de entrada directamente a
repository.saveAll() en lugar de mutar la entidad de BD, lo que
provocaba que los campos de auditoría (created_by, creation_date,
last_modified_by, last_modified_date) se perdieran al guardar.

Además se añade detección de cambios reales: si ningún campo editable
difiere respecto a BD, el miembro no se incluye en el saveAll,
evitando UPDATE innecesarios.

Se elimina también una consulta a BD redundante en la validación de
solapamientos que operaba sobre los datos previos  y podía dar falsos
positivos.